# mathgraph-igp24-continuation-engine

./: .gitignore  README.md  mathgraph_igp24_v101_provenance_bearing_continuation_engine.py  pyproject.toml
manifests/: storage-policy.json
schemas/: lawbook.schema.json  mutation-trial.schema.json  obstruction.schema.json  recommendation.schema.json
scripts/: analyze_survivor_geometry.py  build_colab.py  build_colab_artifact.py  run_v102_cycle.py  run_v109_survivor_cycle.py
src/mathgraph_igp24/: __init__.py  api.py  basins.py  constructors.py  cycle.py  fingerprints.py  lawbook.py  laws.py  leaderboard.py  memory.py  models.py  mutations.py  obstruction_atlas.py  obstructions.py  polynomial.py  portfolio.py  portfolio_v2.py  provenance.py  replay.py  router.py  submission.py  survivor_atlas.py  survivor_router.py  trials.py
tests/: conftest.py  test_api_join.py  test_colab_artifact.py  test_constructors.py  test_cycle.py  test_igp24_v101_provenance_engine.py  test_laws.py  test_leaderboard.py  test_mutations.py  test_obstruction_atlas.py  test_obstructions.py  test_polynomial.py  test_portfolio.py  test_portfolio_v2.py  test_public_contracts.py  test_router.py  test_submission.py  test_survivor_atlas.py  test_survivor_router.py  test_trials.py  test_v109_cycle.py
tests/fixtures/: api_outcome.json  parent_poly.txt
