[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mathgraph-igp24-continuation-engine"
version = "0.2.0"
description = "Provenance-bearing continuation engine for IGP24"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.setuptools.packages.find]
where = ["src"]
